up to lecture 31 html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Andrei HTML</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../css/styles.css"
+    />
     <script src="../js/main.js"></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="headings" class="content">
+      <h1>Hey ho!!! I like purple!!!</h1>
+      <h2>Hey ho!!! I like purple!!!</h2>
+      <h3>Hey ho!!! I like purple!!!</h3>
+      <h4>Hey ho!!! I like purple!!!</h4>
+      <h5>Hey ho!!! I like purple!!!</h5>
+      <h6>Hey ho!!! I like purple!!!</h6>
+      <p>
+        <strong>Lorem ipsum</strong> dolor sit amet consectetur adipisicing
+        elit. Sapiente, repellendus cum excepturi quis nam facilis sunt esse
+        voluptate ipsum amet?
+      </p>
+      <h1>Hello</h1>
+      <p>
+        <b>Lorem ipsum</b> dolor sit amet consectetur, adipisicing elit. Nobis
+        animi quod temporibus? Modi, distinctio ducimus consectetur nisi
+        dignissimos rerum omnis?
+      </p>
+    </div>
+    <div id="lists" class="content">
+      <ol>
+        <li>Banana</li>
+        <li>Apple</li>
+        <ul>
+          <li>Honey Crisp</li>
+          <li>Fuji</li>
+          <li>Granny Smiths</li>
+        </ul>
+        <li>Orange</li>
+        <li>Pears</li>
+        <li>Pineapple</li>
+      </ol>
+    </div>
+    <div id="self-closing" class="content">
+      <h1>Self Closing Tags
+      </h1>
+      <img src="https://d2lnr5mha7bycj.cloudfront.net/product-image/file/large_6529268a-0977-4661-afe6-3f0d8cad7b46.jpg" alt="Apple Photo">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus numquam magni dolorum asperiores consequatur itaque nisi, nesciunt pariatur ipsum ratione.</p>
+      <h2>Another Apple</h2>
+      <img src="https://images-na.ssl-images-amazon.com/images/I/81xQBb5jRzL._SY355_.jpg" alt="Apple Photo">
+    </div>
+    <div id="links" class="content">
+      <h1>Links</h1>
+      <img src="https://images-na.ssl-images-amazon.com/images/I/81xQBb5jRzL._SY355_.jpg" alt="Apple Photo">
+      <a href="index2.html">
+        <h2>Go to new page</h2>
+      </a>
+
+    </div>
+  </body>
 </html>
