--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <a href="index2.html">
         <h2>Go to new page</h2>
       </a>
+      <a href="register.html"><h2>Register Here</h2></a>
 
     </div>
   </body>
