--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,15 @@
 <body>
     <div id="new-page" class="content">
     <h1>This is a new page</h1>
-    <a href="index.html">Return to homepage</a>
+    <ul>
+        <li>
+    <a href="index.html">Return to homepage</a></li>
+    <li>
+    <a href="register.html">Register Here</a></li>
+</ul>
+</div>
+<div id="forms" class="content">
+
 </div>
 </body>
 </html>
