lecture 37 end of Section 4

--- a/index2.html
+++ b/index2.html
@@ -13,9 +13,9 @@
     <h1>This is a new page</h1>
     <ul>
         <li>
-    <a href="index.html">Return to homepage</a></li>
+    <a href="index.html"><h2>Return to homepage</h2></a></li>
     <li>
-    <a href="register.html">Register Here</a></li>
+    <a href="register.html"><h2>Register Here</h2></a></li>
 </ul>
 </div>
 <div id="forms" class="content">
