--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -59,7 +59,7 @@
       <h1>Links</h1>
       <img src="https://images-na.ssl-images-amazon.com/images/I/81xQBb5jRzL._SY355_.jpg" alt="Apple Photo">
       <a href="index2.html">
-        <h2>Go to new page</h2>
+        <h2>Go to new page (page 2)</h2>
       </a>
       <a href="register.html"><h2>Register Here</h2></a>
 
